# tech_interview_bot

./: .gitignore  main.py  pyproject.toml  setup.cfg
tech_interview_bot/: bot_init.py  constants.py  db_init.py  db_models.py  utils.py
